# klook

./: .gitignore  CMakeLists.txt  README  README.md  klook.spec
icons/: CMakeLists.txt
locale/: CMakeLists.txt
locale/es/: klook.po
src/: audio.cpp  audio.h  declarativeviewer.cpp  declarativeviewer.h  exifimageprovider.cpp  exifimageprovider.h  file.cpp  file.h  filemodel.h  klookapp.cpp  klookapp.h  kpartsdeclarativeitem.h  kpartswidget.cpp  kpartswidget.h  listitem.cpp  listitemcontent.cpp  main.cpp  mimeprovider.cpp  mimeprovider.h  previewgenerator.cpp  previewgenerator.h  previewprovider.cpp  previewprovider.h  rotatedimage.cpp  rotatedimage.h  video.cpp  video.h
src/qml/: AudioDelegate.qml  Button.qml  ControlPanel.qml  ControlPanelButton.qml  DefaultImage.qml  Delegate.qml  FolderDelegate.qml  ImageDelegate.qml  InfoItem.qml  MimeDelegate.qml  OkularDelegate.qml  PlayButton.qml  Preview.qml  ProgressDelegate.qml  ScrollBar.qml  SingleDelegate.qml  Slider.qml  TextDelegate.qml  VideoDelegate.qml  main.qml
